trying a new fix for horizontal scrolling on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,10 +16,9 @@ html,
 html a {
   -webkit-font-smoothing: antialiased;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  overflow-x: hidden;
 }
 body {
-  overflow-x: none;
-  width: 100vw;
   padding: 0;
   padding-bottom: 100px;
   padding-top: 10px;
